fixed double scroll in notification dropdown

--- a/src/client/components/Navigation/Notifications/Notifications.less
+++ b/src/client/components/Navigation/Notifications/Notifications.less
@@ -17,6 +17,7 @@
       overflow-y: auto;
     }
 
+    height: 45vh;
     max-height: 345px;
 
     @media @medium {
